2007-02-02  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/cfparse.y: Fixed a check of NAT-T support in libipsec. 

2007-02-01  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: When receiving an Isakmp DELETE_SA,
	  gets the cookie of the SA to be deleted from payload instead of
	  just deleting the Isakmp SA used to protect the informational.
	  Problem reported by "unclepedro" on Sourceforge's bugtracker.

2006-12-18  Yvan Vanhullebus  <vanhu@netasq.com>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/crypto_openssl.c: fixed a memory leak
	
---------------------------------------------

	Branch for 0.7 created (ipsec-tools-0_7-branch)

2006-12-11 Emmanuel Dreyfus  <manu@netbsd.org>
	* src/libipsec/{Makefile.am|libpfkey.h|pfkey.c}
	  src/racoon/{backupsa.c|pfkey.c}: Bring back API and ABI backward
	  compatibility with previous libipsec interface change. Bump 
	  libipsec minor version. Remove ifdefs in struct pfkey_send_sa_args
	  to avoid ABI compatibility lossage.
	* src/libipsec/{libpfkey.h|pfkey.c} src/racoon/cfparse.y: add 
	  capability flags to detect missing optional feature in libipsec

2006-12-10 Emmanuel Dreyfus  <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/Makefile.am
	  src/racoon/doc/README.plainrsa: new file documenting plain RSA auth

2006-12-09 Emmanuel Dreyfus  <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac src/libipsec/{libpfkey.h|pfkey.c}
	  src/racoon/{Makefile.am|backupsa.c|backupsa.h|cftoken.l|ipsec_doi.c}
	  src/racoon/{ipsec_doi.h|isakmp_inf.c|isakmp_quick.c|pfkey.c|policy.c}
	  src/racoon/{policy.h|proposal.c|proposal.h|remoteconf.c}: Add 		  support for SELinux security contexts. Also cleanup the libipsec
	  interface for adding and updating security associations.

	From Simon Chang <simonychang@gmail.com>
	* src/racoon/racoon.conf.5: More hints about plain RSA authentication

2006-12-05  Yvan Vanhullebus  <vanhu@netasq.com>